@@ -3,9 +3,8 @@ package math.groupdata;
 import math.MathGroup;
 import math.MathObjects;
 import math.math.math.ArithmeticOperation;
-import math.math.object.Fraction;
+import math.math.object.Formula;
 
-import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -16,77 +15,58 @@ import java.util.Objects;
  * @author wysha
  */
 public class GroupData extends MathObjects {
-    public final Fraction[] fractions;
+    public final Formula[] fractions;
     public final GroupData[] groupData;
-    Fraction average;
-    Fraction variance;
-    transient private ArrayList<Fraction> all;
+    public final Formula sum;
+    public final Formula average;
+    public final Formula variance;
+    public final Formula median;
+    public final ArrayList<Formula> all;
 
-    public GroupData(Fraction[] fractions, GroupData[] groupDataArray, String name, MathGroup mathGroup) throws Throwable {
+    public GroupData(Formula[] formulas, GroupData[] groupDataArray, String name, MathGroup mathGroup) throws Throwable {
         super(name);
         this.groupData = Objects.requireNonNullElseGet(groupDataArray, () -> new GroupData[]{});
         mathGroup.checkName(this);
-        List<Fraction> list = Arrays.asList(fractions);
-        list.sort(Fraction::isMoreThan);
-        this.fractions = list.toArray(new Fraction[0]);
+        List<Formula> list = Arrays.asList(formulas);
+        list.sort(Formula::compareTo);
+        this.fractions = list.toArray(new Formula[0]);
+
+        all = new ArrayList<>(Arrays.asList(formulas));
+        for (GroupData g : groupData) {
+            all.addAll(Arrays.asList(g.fractions));
+        }
+
+        Formula formula = new Formula(new ArrayList<>(List.of(BigInteger.ZERO)),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false);
+        for (Formula f : all) {
+            formula=formula.add(ArithmeticOperation.ADD,f);
+        }
+        sum=formula.operation(new ArrayList<>());
+
+        average = sum.add(ArithmeticOperation.DIVIDE,new Formula(List.of(BigInteger.valueOf(all.size())),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false));
+
+        Formula rs = new Formula(new ArrayList<>(List.of(BigInteger.ZERO)),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false);
+        for (Formula f : all) {
+            Formula s = f.add(ArithmeticOperation.SUBTRACT,average);
+            rs = rs.add(ArithmeticOperation.ADD,s.add(ArithmeticOperation.MULTIPLY,s));
+        }
+        rs = rs.add(ArithmeticOperation.DIVIDE,new Formula(List.of(BigInteger.valueOf(all.size())),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false));
+        variance = rs;
+
+        if (all.size() % 2 == 0) {
+            int s=all.size()/ 2;
+            median = all.get(s).add(ArithmeticOperation.ADD,all.get(s - 1)).add(
+                    ArithmeticOperation.DIVIDE,
+                    new Formula(List.of(BigInteger.valueOf(2)),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false)
+            );
+        } else {
+            median = all.get((all.size() - 1) / 2);
+        }
+
         mathGroup.groupData.add(this);
     }
 
     @Override
     public String toString() {
-        flush();
         return "数据组名:" + name + "    包含的数据数量:" + all.size();
-    }
-
-    private void flush() {
-        all = new ArrayList<>(Arrays.asList(fractions));
-        for (GroupData g : groupData) {
-            all.addAll(Arrays.asList(g.fractions));
-        }
-    }
-
-    public Fraction getAverage() throws Throwable {
-        flush();
-        Fraction fraction = new Fraction(BigDecimal.valueOf(0), BigDecimal.valueOf(1));
-        for (Fraction f : all) {
-            fraction = ArithmeticOperation.operation(ArithmeticOperation.ADD, fraction, f);
-        }
-        fraction = new Fraction(new BigDecimal(fraction.numerator), new BigDecimal(fraction.denominator.multiply(BigInteger.valueOf(all.size()))));
-        average = fraction;
-        return fraction;
-    }
-
-    public Fraction getVariance() throws Throwable {
-        Fraction rs = new Fraction(BigDecimal.valueOf(0), BigDecimal.valueOf(1));
-        for (Fraction f : all) {
-            Fraction s = ArithmeticOperation.operation(ArithmeticOperation.SUBTRACT, f, average);
-            rs = ArithmeticOperation.operation(
-                    ArithmeticOperation.ADD,
-                    rs,
-                    ArithmeticOperation.operation(ArithmeticOperation.MULTIPLY, s, s)
-            );
-        }
-        rs = new Fraction(new BigDecimal(rs.numerator), new BigDecimal(rs.denominator.multiply(BigInteger.valueOf(all.size()))));
-        variance = rs;
-        return rs;
-    }
-
-    public Fraction getMedian() throws Throwable {
-        flush();
-        Fraction fraction;
-        if (all.size() % 2 == 0) {
-            fraction = ArithmeticOperation.operation(
-                    ArithmeticOperation.DIVIDE,
-                    ArithmeticOperation.operation(
-                            ArithmeticOperation.ADD,
-                            all.get((all.size() - 1) / 2 - 1),
-                            all.get((all.size() + 1) / 2 - 1)
-                    ),
-                    new Fraction(BigDecimal.valueOf(2), BigDecimal.valueOf(1))
-            );
-        } else {
-            fraction = all.get((all.size() + 1) / 2 - 1);
-        }
-        return fraction;
     }
 }
